2002-04-01  Vince Darley <vincentdarley@sourceforge.net>
        * Makefile.in: compilation fix from jcw.
	
2002-03-16  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: updated for latest cvs head of Tcl 8.4a5.
	* library/vfs.tcl: New version from jcw, with better handling
	of env(PATH).

2002-03-09  Vince Darley <vincentdarley@sourceforge.net>
	* library/mk4vfs.tcl: updated version from Jean-Claude Wippler.

2002-03-01  Vince Darley <vincentdarley@sourceforge.net>
	* library/*.tcl: completed and tested most changes from 02-19.

2002-02-19  Vince Darley <vincentdarley@sourceforge.net>
	* library/*.tcl: updated the vfs implementations to deal
	with the 2002-02-01 change below.  More work needed.

2002-02-17  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: updated for TIP#72 application to cvs head.
	The 'file stat' implementation now deals with files of size
	greater than a 32 bit representation.  This requires the
	very latest cvs head of Tcl 8.4a4, and is not compatible
	with previous releases (but that is fine, since we're still
	tracking alpha releases anyway).

2002-02-01 Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: allow 'pattern' to be NULL in calls to 
	Tcl_FSMatchInDirectory in preparation for fix of Tcl bug
	511666.  This will require additions to each individual
	filesystem to handle that special case (and thereby fix the
	bug that fully specified files were not matched against
	'types').

2002-01-28 Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: const, MacOS fixes (also thanks Daniel Steffen).

2001-12-07 Vince Darley <vincentdarley@sourceforge.net>
	* various test, install fixes (unix) thanks to Larry Virden.
	
2001-12-02 Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: minor code cleanup and simplification. Fix
	to problem with absolute paths on unix systems introduced in
	recent changes.
	
2001-11-21 Vince Darley <vincentdarley@sourceforge.net>